# cpp_crossplatform_libs

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  another_test.cpp  my_test.cpp
apps/: dynamic_link_test.cpp
dl_loader/: CMakeLists.txt  DLLoader_unix.hpp  dl_loader  library_names.hpp
dl_loader/windows/: DLLoader.hpp
libraries/: CMakeLists.txt
libraries/my_dynamic_lib/: CMakeLists.txt
libraries/my_static_lib/: CMakeLists.txt
my_library/: CMakeLists.txt  my_library
my_library/includes/: code_cpp.hpp  common_functions.hpp  exported.hpp  functions_api.hpp
